Alterações no arquivo `index.html`

--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
       <label for="arrayInput">Informe os números separados por vírgula:</label>
       <input type="text" id="arrayInput" name="arrayInput" required>
       <br>
-      <button type="submit">Encontrar Índices</button>
+      <button type="submit">Ver índices</button>
     </form>
     <p id="resultadoIndices"></p>
   </div>
 
   <div class="box">
-    <h2>Calcular soma de múltiplos</h2>
+    <h2>Soma de múltiplos 5 ou 7 abaixo de 1000</h2>
     <form id="formSomaMultiplos">
-      <button type="submit">Calcular Soma de Múltiplos de 5 ou 7 abaixo de 1000</button>
+      <button type="submit">Ver resultado</button>
     </form>
     <p id="resultadoSomaMultiplos"></p>
   </div>
